# rigg

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  INSTALL.md  LICENSE.md  MCP.md  README.md  SKILLS.md
.claude/skills/api-watchdog/: SKILL.md
.claude/skills/hoist-guide/: SKILL.md
.claude/skills/hoist-pull/: SKILL.md
.claude/skills/hoist-push/: SKILL.md
.claude/skills/hoist-status/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/rigg-guide/: SKILL.md
.claude/skills/rigg-pull/: SKILL.md
.claude/skills/rigg-push/: SKILL.md
.claude/skills/rigg-status/: SKILL.md
.claude/skills/test-complete-enduser-experience/: SKILL.md
.github/workflows/: api-watchdog.yml  ci.yml  release.yml
crates/hoist-az/: Cargo.toml
crates/hoist-az/doc/: ai-reference.md
crates/hoist-az/src/: banner.rs  cli.rs  main.rs  update.rs
crates/hoist-az/src/commands/: ai.rs  common.rs  completion.rs  config.rs  confirm.rs  copy.rs  delete.rs  describe.rs  describe_project.rs  diff.rs  env.rs  explain.rs  init.rs  mod.rs  pull.rs  pull_watch.rs  push.rs  scaffold.rs  skill.rs  status.rs  validate.rs
crates/hoist-az/src/commands/common/: fields.rs  mod.rs  ordering.rs  selection.rs
crates/hoist-az/src/commands/copy/: knowledge_source.rs  mod.rs  standalone.rs  tests.rs
crates/hoist-az/src/commands/describe/: dispatch.rs  helpers.rs  index_advanced.rs  long_text.rs  mod.rs  resource_fields.rs  resource_fields_extra.rs
crates/hoist-az/src/commands/describe_project/: json_output.rs  mod.rs  parse.rs  text_output.rs
crates/hoist-az/src/commands/diff/: ai.rs  compare.rs  cross_env.rs  format.rs  foundry.rs  mod.rs  search.rs
crates/hoist-az/src/commands/init/: additive.rs  discovery.rs  mod.rs  prompts.rs  readme.rs
crates/hoist-az/src/commands/pull/: discover.rs  execute.rs  mod.rs  output.rs  write.rs
crates/hoist-az/src/commands/push/: agents.rs  collect.rs  credentials.rs  execute.rs  explain.rs  mod.rs  report.rs
crates/hoist-az/src/commands/validate/: field_types.rs  lint.rs  mod.rs  references.rs
crates/hoist-az/src/mcp/: mod.rs  tools.rs
crates/hoist-cli/: Cargo.toml
crates/hoist-cli/src/: main.rs
crates/hoist-cli/src/commands/: auth.rs  common.rs  config.rs  describe.rs  diff.rs  init.rs  mod.rs  validate.rs
crates/hoist-client/: Cargo.toml  README.md
crates/hoist-client/src/: ai.rs  arm.rs  auth.rs  client.rs  error.rs  foundry.rs  lib.rs  local_agent.rs  ollama.rs  openai.rs
crates/hoist-core/: Cargo.toml  README.md
crates/hoist-core/src/: config.rs  copy.rs  lib.rs  normalize.rs  scaffold.rs  service.rs  state.rs  templates.rs
crates/hoist-core/src/constraints/: dependencies.rs  immutability.rs  mod.rs
crates/hoist-core/src/resources/: agent.rs  alias.rs  datasource.rs  index.rs  indexer.rs  knowledge_base.rs  managed.rs  mod.rs  skillset.rs  synonym_map.rs  traits.rs
crates/hoist-diff/: Cargo.toml  README.md
crates/hoist-diff/src/: lib.rs  output.rs  semantic.rs  text_diff.rs
crates/rigg/: CONCEPTS.md  Cargo.toml
crates/rigg-client/: Cargo.toml  README.md
crates/rigg-client/src/: ai.rs  arm.rs  arm_resources.rs  auth.rs  client.rs  cosmos.rs  error.rs  foundry.rs  lib.rs
crates/rigg-core/: Cargo.toml  README.md
crates/rigg-core/src/: config.rs  graph.rs  identity.rs  lib.rs  migrate.rs  normalize.rs  openapi.rs  registry.rs  scaffold.rs  sidecar.rs  state.rs  store.rs  templates.rs  workspace.rs
crates/rigg-core/src/constraints/: mod.rs
crates/rigg-core/src/resources/: agent.rs  knowledge_source.rs  managed.rs  mod.rs  skillset.rs  traits.rs
crates/rigg-diff/: Cargo.toml  README.md
crates/rigg-diff/src/: lib.rs  output.rs  semantic.rs  text_diff.rs
crates/rigg/doc/: ai-reference.md
crates/rigg/src/: banner.rs  cli.rs  completion_dynamic.rs  main.rs  update.rs
crates/rigg/src/commands/: adopt.rs  ai.rs  ai_assist.rs  auth.rs  ci.rs  concepts.rs  config.rs  confirm.rs  copy.rs  credentials.rs  delete.rs  describe.rs  dev.rs  diff.rs  discovery.rs  doctor.rs  env.rs  explain.rs  init.rs  interactive.rs  mcp_cmd.rs  migrate.rs  mod.rs  new.rs  promote.rs  pull.rs  push.rs  remote.rs  scaffold.rs  skill.rs  status.rs  validate.rs  version.rs
crates/rigg/src/commands/az/: agent.rs  index.rs  indexer.rs  kb.rs  mod.rs
crates/rigg/src/commands/ci_templates/: rigg-deploy.yml  rigg-drift.yml  rigg-validate.yml
crates/rigg/src/commands/common/: fields.rs  ordering.rs  selection.rs
crates/rigg/src/commands/copy/: knowledge_source.rs  mod.rs  rewrite.rs  standalone.rs  tests.rs
crates/rigg/src/commands/describe/: dispatch.rs  helpers.rs  long_text.rs  (+4 more)
crates/rigg/src/mcp/: mod.rs  tools.rs
crates/rigg/tests/: cli_surface.rs  sync.rs
docs/superpowers/plans/: 2026-05-10-cosmos-ks-wizard-phase-1.md  2026-07-07-phase-0.18-core-rearchitecture.md  2026-07-07-phase-0.19-doctor-ci-watchdog.md  2026-07-07-phase-0.20-openapi-ai.md  2026-07-09-adopt-wizard.md  2026-07-09-concepts-help-parity.md  2026-07-09-scoped-adopt.md  2026-07-10-auto-created-exclusion.md  2026-07-10-directional-diff.md  2026-07-10-environments.md  2026-07-10-portal-refs-dep-selection.md  2026-07-10-self-healing-baselines.md  2026-07-14-ks-migrate.md  2026-07-15-az-ops-and-completion.md
docs/superpowers/specs/: 2026-05-08-cosmos-ks-wizard-design.md  2026-07-07-rigg-1.0-redesign-design.md  2026-07-09-adopt-wizard-design.md  2026-07-09-rigg-concepts-help-parity-design.md  2026-07-09-scoped-adopt-design.md  2026-07-10-auto-created-exclusion-design.md  2026-07-10-directional-diff-design.md  2026-07-10-environments-design.md  2026-07-10-portal-refs-dep-selection-design.md  2026-07-10-self-healing-baselines-design.md  2026-07-14-ks-migrate-design.md  2026-07-15-az-ops-and-completion-design.md  2026-07-15-multi-env-status-design.md
samples/: .gitignore  README.md  rigg.yaml
samples/apis/: doc-enrichment.json
samples/projects/agentic-stack/: README.md  project.yaml
samples/projects/cosmos-sql-patterns/: README.md  project.yaml
samples/projects/quickstart-blob/: README.md  project.yaml
(+50 files in other folders)
