[workspace]
resolver = "2"
members = [
    "crates/rigg",
    "crates/rigg-core",
    "crates/rigg-client",
    "crates/rigg-diff",
]

[workspace.package]
version = "0.16.0"
edition = "2024"
authors = ["Kristofer Liljeblad <kristofer@mklab.se>"]
license = "MIT"
repository = "https://github.com/mklab-se/rigg"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Configuration
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Templating
handlebars = "6.0"

# Diff
similar = "2.6"

# Version parsing
semver = "1.0"

# Terminal colors
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File utilities
dirs = "5.0"
walkdir = "2.5"
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"

# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1.2"

# Testing
tempfile = "3.10"

# AI integration
ailloy = { version = "0.5", default-features = false, features = ["config-tui"] }

# Internal crates
rigg-core = { version = "0.16.0", path = "crates/rigg-core" }
rigg-client = { version = "0.16.0", path = "crates/rigg-client" }
rigg-diff = { version = "0.16.0", path = "crates/rigg-diff" }
