[package]
name = "hoist-az"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hoist"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete = "4.5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
dirs.workspace = true
chrono.workspace = true

colored.workspace = true

hoist-core.workspace = true
hoist-client.workspace = true
hoist-diff.workspace = true
