[package]
name = "hoist-az"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Configuration-as-code CLI for Azure AI Search and Microsoft Foundry"
readme = "../../README.md"
keywords = ["azure", "search", "ai", "configuration", "devops"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hoist"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete = "4.5"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
dirs.workspace = true
chrono.workspace = true

colored.workspace = true
reqwest.workspace = true
semver.workspace = true

hoist-core.workspace = true
hoist-client.workspace = true
hoist-diff.workspace = true

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/hoist-v{ version }-{ target }.{ archive-format }"
bin-dir = "hoist{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
